# ket

./: .clang-format  .cmake-format.yaml  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  pyproject.toml
.github/scripts/benchmark/: .gitignore  README.md  benchmark.py  circuits.py  requirements.txt
.github/scripts/benchmark/adapters/: base.py  cirq_adapter.py  ket_adapter.py  pennylane_adapter.py  qiskit_adapter.py  qpp_adapter.py
.github/scripts/benchmark/qpp_bench/: CMakeLists.txt  qpp_bench.cpp
.github/scripts/readme_svgs/: .gitignore  ket_title.py
.github/workflows/: ci.yml  format.yml  linux.yml  macos.yml  pages.yml  windows.yml
bindings/: module.cpp
bindings/python/: module.cpp
bindings/python/ket/: __init__.py
bindings/qasm/: qasm.cpp
cli/: CMakeLists.txt  commands.cpp  commands.hpp  main.cpp
cmake/: ketConfig.cmake.in
examples/: CMakeLists.txt  bell.cpp  bell.qasm  bernstein_vazirani.cpp  bernstein_vazirani.qasm  bit_flip_code.cpp  deutsch_jozsa.cpp  deutsch_jozsa.qasm  expectation_value.cpp  ghz.cpp  ghz.qasm  grover.cpp  grover.qasm  qft.qasm
gui/: CMakeLists.txt  app.cpp  app.hpp  icon.hpp  main.cpp
include/ket/: circuit.hpp  dag.hpp  gate.hpp  ket.hpp  measurement.hpp  observable.hpp  parallelism.hpp  qasm.hpp  qubit.hpp  simulator.hpp  state.hpp  stepper.hpp  version.hpp  version.hpp.in
include/ket/backends/: backend.hpp
python/ket/: __init__.py
src/: circuit.cpp  dag.cpp  ket.cpp  measurement.cpp  observable.cpp  parallel.hpp  parallelism.cpp  simulator.cpp  state.cpp
src/backends/: backend.cpp  internal.hpp  stabilizer.cpp  statevector.cpp
tests/: CMakeLists.txt  test_block.cpp  test_circuit.cpp  test_cli.cpp  test_dag.cpp  test_fusion.cpp  test_gate.cpp  test_measurement.cpp  test_observable.cpp  test_parallelism.cpp  test_print.cpp  test_qasm.cpp  test_qubit.cpp  test_sanity.cpp  test_simulator.cpp  test_stabilizer.cpp  test_stepper.cpp
tests/python/: test_ket.py
website/: index.html  main.js  styles.css
website/assets/: demo.webm
website/demo/: index.html
