# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 Breno Cunha Queiroz
[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "ket"
dynamic = ["version"]  # read from the top-level VERSION file (see below)
description = "A quantum computing library for C++ with Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Breno Cunha Queiroz" }]
keywords = ["quantum", "quantum-computing", "simulator"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "ruff>=0.6"]

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.20"
# The pure-Python package lives here; the compiled _ket module is installed
# into the same `ket/` directory by CMake (see install(TARGETS _ket ...)).
wheel.packages = ["bindings/python/ket"]
cmake.define.KET_PYTHON = "ON"
cmake.define.KET_TESTS = "OFF"
# Persistent build dir + rebuild-on-import, so an editable install picks up
# C++ changes the next time the package is imported. Kept outside `build/` so
# `./build.sh --clean` (which removes `build/`) does not break the editable
# install's rebuild hook.
build-dir = "build-py/skbuild-{wheel_tag}"
editable.rebuild = true

# The package version is read from the top-level VERSION file, the single
# source of truth shared with CMake (see project.dynamic above).
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = '(?P<value>.+)'

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, import sorting
